# Agent_Team

./: README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: analyst_agent.py  dev_agent.py  ops_agent.py  pm_agent.py  qa_agent.py  tech_lead_agent.py
configs/: pipeline.json
orchestrator/: flow.py
tests/: test_flow.py
